--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     <title>React App</title>
   </head>
   <body>
+    <section>
+        <h1> Google Book Search </h1>
+    </section>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
