Added styles for header tag

--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,25 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      header{
+        background: black;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      header > h1{
+          font-size: 50px;
+          color: white;
+          text-align: center;
+        }
+    </style>
   </head>
   <body>
-    <section>
+    <header>
         <h1> Google Book Search </h1>
-    </section>
+    </header>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
